modules/gdscript/tests/scripts/analyzer/errors/class_name_shadows_builtin_type.gd
class Vector2:
	pass

func test():
	pass
